Bug 356224 - Always move the caret to the currently playing item
Summary: Always move the caret to the currently playing item
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-03 04:09 UTC by Sudhir Khanger
Modified: 2021-03-24 03:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sudhir Khanger 2015-12-03 04:09:47 UTC
When a song changes the caret or the list should be rearranged to show the currently playing item.

Reproducible: Always

Steps to Reproduce:
1. Play a song
2. Hit next to play a song at some random position in the list
3. the playlist doesn't move

Actual Results:  
The list stays where it is. It doesn't move or show currently playing item

Expected Results:  
The caret should be moved and the list should show currently playing item.

Juk 3.12 on Fedora 23. There is a button to do this in the bottom right corner but you have press it every time you want to move to the currently playing song. At the least once a user has enabled it should remain enabled.
Comment 1 Justin Zobel 2021-03-09 06:26:56 UTC
Thank you for the bug report.

As this report hasn't seen any changes in 5 years or more, we ask if you can please confirm that the issue still persists.

If this bug is no longer persisting or relevant please change the status to resolved.
Comment 2 Michael Pyne 2021-03-24 03:20:10 UTC
Git commit cbfe92c3714ba1edf1403a46ae79d905db281aaf by Michael Pyne.
Committed on 24/03/2021 at 03:08.
Pushed by mpyne into branch 'master'.

playlist: Ensure playing track is visible when it changes.

I tried to ensure this only causes the playlist to jump when the user
isn't directly interacting with the track (e.g. double click to play).
FIXED-IN:21.04

M  +1    -1    playermanager.cpp
M  +10   -2    playlist.cpp
M  +1    -1    playlist.h
M  +6    -0    playlistcollection.cpp

https://invent.kde.org/multimedia/juk/commit/cbfe92c3714ba1edf1403a46ae79d905db281aaf