playlist: Ensure playing track is visible when it changes.

I tried to ensure this only causes the playlist to jump when the user
isn't directly interacting with the track (e.g. double click to play).

BUG:356224
FIXED-IN:21.04